--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "hardhat": "^2.9.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "3.4.2-solc-0.7"
   }
 }
