--- a/package.json
+++ b/package.json
@@ -5,12 +5,27 @@
   "repository": "git@github.com:consenlabs/tokenlon-contract.git",
   "author": "Charles Jhong <charlesjhongc@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "setup": "yarn install --frozen-lockfile && yarn allow-scripts",
+    "check-pretty": "prettier --check .",
+    "lint-sol": "solhint \"contracts/**/*.sol\"",
+    "lint-es": "eslint --ignore-path .prettierignore \"./**/*.ts\"",
+    "compile-sol": "hardhat compile --show-stack-traces --force",
+    "compile-ts": "tsc --noEmit",
+    "test-all": "hardhat test --parallel --network hardhat"
+  },
   "devDependencies": {
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.27",
     "chai": "^4.3.6",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-mocha-no-only": "^1.1.1",
     "hardhat": "^2.9.3",
+    "prettier": "^2.6.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solhint-plugin-prettier": "^0.0.5",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
