--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hardhat": "^2.9.3",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
