--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install
-        run: yarn run setup
+        run: yarn install --frozen-lockfile
       - name: Format
         run: yarn run check-pretty
       - name: Lint
