--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.27",
+    "@typescript-eslint/eslint-plugin": "^5.24.0",
+    "@typescript-eslint/parser": "^5.24.0",
     "chai": "^4.3.6",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
