--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
   "scripts": {
     "setup": "yarn install --frozen-lockfile && yarn allow-scripts",
     "check-pretty": "prettier --check .",
-    "lint-sol": "solhint \"contracts/**/*.sol\"",
-    "lint-es": "eslint --ignore-path .prettierignore \"./**/*.ts\"",
-    "compile-sol": "hardhat compile --show-stack-traces --force",
-    "compile-ts": "tsc --noEmit",
+    "lint": "solhint \"contracts/**/*.sol\"",
+    "compile-contracts": "hardhat compile --show-stack-traces --force",
     "compile-foundry": "forge build",
-    "test-all": "hardhat test --parallel --network hardhat",
-    "test-foundry": "forge test -vvv --no-match-path contracts/test/forkMainnet/*.t.sol",
-    "test-foundry-fork-mainnet": "forge test -vvv --fork-url https://eth-mainnet.alchemyapi.io/v2/$ALCHEMY_TOKEN --fork-block-number $FORK_BLOCK_NUMBER --match-path contracts/test/forkMainnet/*.t.sol"
+    "test-foundry-local": "forge test -vvv --force --no-match-path 'contracts/test/forkMainnet/*.t.sol'",
+    "test-foundry-fork": "forge test -vvv --force --fork-url $FORK_URL --fork-block-number $FORK_BLOCK_NUMBER --match-path 'contracts/test/forkMainnet/*.t.sol'"
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
