--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "setup": "yarn install --frozen-lockfile && yarn allow-scripts",
     "check-pretty": "prettier --check .",
     "lint": "solhint \"contracts/**/*.sol\"",
-    "compile-contracts": "hardhat compile --show-stack-traces --force",
-    "compile-foundry": "forge build",
+    "compile": "forge build --force",
     "test-foundry-local": "forge test -vvv --force --no-match-path 'contracts/test/forkMainnet/*.t.sol'",
     "test-foundry-fork": "forge test -vvv --force --fork-url $FORK_URL --fork-block-number $FORK_BLOCK_NUMBER --match-path 'contracts/test/forkMainnet/*.t.sol'"
   },
