--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,8 +37,7 @@ jobs:
           yarn run lint
       - name: Compile
         run: |
-          yarn run compile-contracts
-          yarn run compile-foundry
+          yarn run compile
       - name: Test
         env:
           FORK_URL: ${{ secrets.FORK_URL }}
