--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,5 +44,6 @@ jobs:
           FORK_URL: ${{ secrets.FORK_URL }}
           FORK_BLOCK_NUMBER: 14340000
         run: |
+          yarn run test-hardhat
           yarn run test-foundry-local
           yarn run test-foundry-fork
