update node url name

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,7 +40,7 @@ jobs:
           yarn run compile
       - name: Test
         env:
-          NODE_RPC_URL: ${{ secrets.NODE_RPC_URL }}
+          MAINNET_NODE_RPC_URL: ${{ secrets.MAINNET_NODE_RPC_URL }}
           FORK_BLOCK_NUMBER: 14340000
         run: |
           yarn run test-hardhat
