update to MAINNET_NODE_RPC_URL

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-NODE_RPC_URL=https://eth-mainnet.alchemyapi.io/v2/#####__YOUR_SECRET__#####
+MAINNET_NODE_RPC_URL=https://eth-mainnet.alchemyapi.io/v2/#####__YOUR_SECRET__#####
 FORK_BLOCK_NUMBER=14340000
