rm ts test related resources

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
       "~/*": ["*"]
     }
   },
-  "include": ["hardhat.config.ts", "lib/**/*", "test/**/*"]
+  "include": ["hardhat.config.ts"]
 }
