--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "check-pretty": "prettier --check .",
     "lint": "solhint \"contracts/**/*.sol\"",
     "compile": "hardhat compile --show-stack-traces --force && forge build --force",
-    "test-foundry-local": "forge test -vvv --force --no-match-path 'contracts/test/forkMainnet/*.t.sol'",
-    "test-foundry-fork": "forge test -vvv --force --fork-url $MAINNET_NODE_RPC_URL --fork-block-number 15451000 --match-path 'contracts/test/forkMainnet/*.t.sol'"
+    "test-foundry-local": "DEPLOYED=false forge test -vvv --force --no-match-path 'contracts/test/forkMainnet/*.t.sol'",
+    "test-foundry-fork": "DEPLOYED=false forge test -vvv --force --fork-url $MAINNET_NODE_RPC_URL --fork-block-number 15451000 --match-path 'contracts/test/forkMainnet/*.t.sol'"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
