--- a/foundry.toml
+++ b/foundry.toml
@@ -1,4 +1,4 @@
-[default]
+[profile.default]
 src = 'contracts'                                             # the source directory
 test = 'contracts/test'                                       # the test directory
 out = 'artifacts-foundry'                                     # the output directory (for artifacts)
@@ -15,10 +15,10 @@ initial_balance = '0xffffffffffffffffffffffff'                # the initial bala
 gas_limit = 9223372036854775807                               # the gas limit in tests
 gas_price = 0                                                 # the gas price (in wei) in tests
 
+verbosity = 3
 fuzz_runs = 1000                                              # the number of fuzz runs for tests
 fuzz_max_global_rejects = 10000000
 
-#solc_version = '0.8.13'                                      # override for the solc version (setting this ignores `auto_detect_solc`)
 auto_detect_solc = true                                       # enable auto-detection of the appropriate solc version to use
 ignored_error_codes = []                                      # a list of ignored solc error codes
 
