--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,6 @@
 [profile.default]
 src = 'contracts'                                             # the source directory
-test = 'contracts/test'                                       # the test directory
+test = 'test'                                                 # the test directory
 out = 'artifacts'                                             # the output directory (for artifacts)
 cache = true                                                  # whether to cache builds or not
 force = false                                                 # whether to ignore the cache (clean build)
