--- a/.github/workflows/tokenlon-contracts.yml
+++ b/.github/workflows/tokenlon-contracts.yml
@@ -20,8 +20,8 @@ jobs:
       - name: "Cache RPC Responses"
         uses: "actions/cache@v3"
         with:
-          path: "~/.foundry/cache/rpc/mainnet/15451000"
-          key: "${{ runner.os }}-mainnet-15451000"
+          path: "~/.foundry/cache/rpc/mainnet/"
+          key: "${{ runner.os }}-mainnet"
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
