--- a/foundry.toml
+++ b/foundry.toml
@@ -7,6 +7,7 @@ force = true                                                  # whether to ignor
 auto_detect_solc = true                                       # enable auto-detection of the appropriate solc version to use
 optimizer = true                                              # enable or disable the solc optimizer
 optimizer_runs = 200                                          # the number of optimizer runs
+verbosity = 3                                                 # The verbosity of tests
 ignored_error_codes = []                                      # a list of ignored solc error codes
 block_number = 10000
 block_timestamp = 1640966400                                  # 2022/01/01 00:00
