--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "test-foundry-fork": "DEPLOYED=false forge test --fork-url $MAINNET_NODE_RPC_URL --fork-block-number 15451000 --match-path 'test/forkMainnet/*.t.sol'"
   },
   "devDependencies": {
+    "@tokenlon/contracts-lib": "^0.0.1",
+    "@types/node": "^18.11.18",
+    "ethers": "^5.7.2",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
