Add skd sign cmd and remove CI signing check

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "solhint \"contracts/**/*.sol\"",
     "compile": "forge build --force",
     "test-foundry-local": "DEPLOYED=false forge test --no-match-path 'test/forkMainnet/*.t.sol'",
-    "test-foundry-fork": "DEPLOYED=false forge test --fork-url $MAINNET_NODE_RPC_URL --fork-block-number 15451000 --match-path 'test/forkMainnet/*.t.sol'"
+    "test-foundry-fork": "DEPLOYED=false forge test --fork-url $MAINNET_NODE_RPC_URL --fork-block-number 15451000 --match-path 'test/forkMainnet/*.t.sol'",
+    "sdk-sign": "npx ts-node test/signing/sdkSign.ts"
   },
   "devDependencies": {
     "@tokenlon/contracts-lib": "^0.0.1",
