specify fixed solidity version in foundry config

--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,7 @@ test = 'test'                                                 # the test directo
 out = 'artifacts'                                             # the output directory (for artifacts)
 cache = true                                                  # whether to cache builds or not
 force = false                                                 # whether to ignore the cache (clean build)
-auto_detect_solc = true                                       # enable auto-detection of the appropriate solc version to use
+solc_version = "0.7.6"
 optimizer = true                                              # enable or disable the solc optimizer
 optimizer_runs = 1000                                         # the number of optimizer runs
 verbosity = 3                                                 # The verbosity of tests
